syntax = "proto3";

package view_courses;

// Request message (can be empty if no filters)
message ViewCoursesRequest {}

message Course {
  string courseCode = 1;
  string title = 2;
  string description = 3;
}

// Response message
message ViewCoursesResponse {
  repeated Course courses = 1;
}

// Service
service ViewCoursesService {
  rpc GetCourses(ViewCoursesRequest) returns (ViewCoursesResponse);
}
